mxslc/tests/data/error/loadlib_error_2.mxsl
#loadlib "../add_include_dir/math.mtlx" (mad)

float x = mad(pi(), 3.0, 4.0);
